--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
+    "redux-form-website-template": "0.0.122",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
